samples/_failures_safe/1761540758_3685c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1aa95e8b.c: In function ‘main’:
./samples/SAFE/__tmp_1aa95e8b.c:158:26: error: expected ‘)’ at end of input
  158 |             dfs(&g, start
      |                ~         ^
      |                          )
./samples/SAFE/__tmp_1aa95e8b.c:158:13: error: expected declaration or statement at end of input
  158 |             dfs(&g, start
      |             ^~~
./samples/SAFE/__tmp_1aa95e8b.c:158:13: error: expected declaration or statement at end of input
